# advent-of-code

./: LICENSE  README.md
2023/src/: main.rs
2023/src/days/: day01.rs  day02.rs  day03.rs  mod.rs
2024/: .gitignore  Cargo.toml  README.md  buildX.rs  run.sh
2024/src/: main.rs
2024/src/days/: create_days.py  day.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
