[package]
name = "aoc2024_by_luk6xff"
version = "1.0.0"
authors = ["luk6xff <lukasz.uszko@gmail.com>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
regex = { version = "1.11.1" }
indoc = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

